Fix bug when the data ot label overflow from the holder layot

--- a/sport-event-app/src/main/webapp/VAADIN/themes/mytheme/simple_event.scss
+++ b/sport-event-app/src/main/webapp/VAADIN/themes/mytheme/simple_event.scss
@@ -2,6 +2,7 @@
   .event-data-viewer {
     background-color: white;
     border: 1px solid #c5c5c5;
+    width: 200px;
     padding: 15px;
     .v-button {
       width: 100%;
@@ -12,6 +13,10 @@
     padding-left: 0px;
     padding-top: 0px;
     padding-bottom: 0px;
+  }
+
+  .normal-white-space {
+    white-space: normal !important;
   }
 }
 
